# glam-rs

./: .gitignore  Cargo.toml
src/: lib.rs
src/f32/: funcs.rs  glam_serde.rs  mat2.rs  mat3.rs  mat4.rs  mod.rs  quat.rs  transform.rs  vec2.rs  vec3.rs  vec3_f32.rs  vec3_sse2.rs  vec4.rs  vec4_f32.rs  vec4_sse2.rs
