[package]
name = "glam"
version = "0.8.0" # remember to update html_root_url
edition = "2018"
authors = ["Cameron Hart <cameron.hart@gmail.com>", "Bridger Herman <herma582@umn.edu>"]
description = "A simple and fast 3D math library for games and graphics"
repository = "https://github.com/bitshifter/glam-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "math", "matrix", "vector", "quaternion"]
categories = ["game-engines"]

[dependencies]
wasm-bindgen = "=0.2.51"
serde = { version = "1.0", optional = true, features = ["derive"] }
